improved scrollbar, should display rentals correctly

--- a/src/styles/ArtworksScrollbarCard.css
+++ b/src/styles/ArtworksScrollbarCard.css
@@ -1,13 +1,12 @@
-.profile-artwork-card-image-wrapper{
+.scrollbar-artwork-card-image-wrapper{
     width:200px;
  }
  
- .profile-artwork-card-image-wrapper>img{
+ .scrollbar-artwork-card-image-wrapper>img{
      width:100%;
- 
   }
  
- .profile-artwork-card-info-wrapper{
+ .scrollbar-artwork-card-info-wrapper{
      margin:0 5px;
      font-size: 12px;
      font-weight: 600;
